--- a/src/components/Card/styles.scss
+++ b/src/components/Card/styles.scss
@@ -36,3 +36,28 @@ button {
         filter: brightness(0.8);
     }
 }
+
+@media only screen and (max-width: 900px) {
+    .container {
+        width: 45rem;
+        height: 45rem;
+    }
+}
+
+@media only screen and (max-width: 800px) {
+    .container {
+        width: 40rem;
+        height: 40rem;
+    }
+}
+
+@media only screen and (max-width: 700px) {
+    .container {
+        width: 30rem;
+        height: 30rem;
+    }
+
+    .title {
+        font-size: 3rem;
+    }
+}
